--- a/configs/wlan/WCNSS_qcom_cfg_qca6390.ini
+++ b/configs/wlan/WCNSS_qcom_cfg_qca6390.ini
@@ -291,6 +291,8 @@ gEnableNUDTracking=3
 gEnableNanSupport=1
 # Enable NAN Datapath
 genable_nan_datapath=1
+# Separate iface creation for NAN
+nan_separate_iface_support=1
 
 ################ NAN feature set end #####################
 
@@ -337,7 +339,7 @@ gEnableSNRMonitoring=1
 wlm_latency_enable=1
 
 # WLM flags setting for ultralow level, bit9 for BMPS disabled
-wlm_latency_flags_ultralow=0x3
+wlm_latency_flags_ultralow=0x180003
 
 # Enable ETSI SRD channels by Xiaomi. Qualcomm default value is disable
 etsi13_srd_chan_in_master_mode=1
@@ -383,6 +385,9 @@ gEnablePacketLog=0
 gIPALowBandwidthMbps=100
 gIPAMediumBandwidthMbps=400
 gIPAHighBandwidthMbps=800
+
+# Add another interface while driver load
+#gEnableConcurrentSTA=wlan1
 
 #max time for active 2G channel scan.
 #if set to zero, gActiveMaxChannelTime is used for 2G channel scan.
