lmi: init: Set `ro.boot.hardware.revision` property
* The value would be shown on Settings > About phone > Model > Hardware version.

Change-Id: I3a9707597ba01690bdf992e77d7d59d67213bca9

--- a/init/init.xiaomi.rc
+++ b/init/init.xiaomi.rc
@@ -168,3 +168,6 @@ service vendor.btmac-sh /vendor/bin/init.mi.btmac.sh
     group system bluetooth wifi
     oneshot
     disabled
+
+on property:ro.boot.hwlevel=*
+    setprop ro.boot.hardware.revision ${ro.boot.hwlevel}
