lmi: init: Add more infos to `ro.boot.hardware.revision` prop
Change-Id: I8110a8a9ec653b4dbb73563336c3859571d0a58e

--- a/init/init.xiaomi.rc
+++ b/init/init.xiaomi.rc
@@ -170,4 +170,4 @@ service vendor.btmac-sh /vendor/bin/init.mi.btmac.sh
     disabled
 
 on property:ro.boot.hwlevel=*
-    setprop ro.boot.hardware.revision ${ro.boot.hwlevel}
+    setprop ro.boot.hardware.revision ${ro.boot.hwc}_${ro.boot.hwlevel}_${ro.boot.hwversion}
