--- a/init/init.target.rc
+++ b/init/init.target.rc
@@ -96,6 +96,10 @@ on property:vendor.display.lcd_density=640
 on boot && property:persist.vendor.usb.controller.default=*
     setprop vendor.usb.controller ${persist.vendor.usb.controller.default}
 
+on property:sys.boot_completed=1
+    # Disable native stats collection service
+    stop statsd
+
 on charger
     start vendor.power_off_alarm
     setprop sys.usb.controller a600000.dwc3
